--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 .attribution {
-  font-size: 11px;
+  font-size: 0.6875rem;
   text-align: center;
 }
 .attribution a {
@@ -17,53 +17,53 @@ body {
 }
 
 main {
-  width: 311px;
-  border-radius: 10px;
+  width: 19.4375rem;
+  border-radius: 0.625rem;
   overflow: hidden;
   display: grid;
   grid-template-columns: repeat(1, 1fr);
   grid-template-rows: repeat(3, 1fr);
 
-  box-shadow: 6px 4px 44px 4px rgba(0, 0, 0, 0.37);
-  -webkit-box-shadow: 6px 4px 44px 4px rgba(0, 0, 0, 0.37);
-  -moz-box-shadow: 6px 4px 44px 4px rgba(0, 0, 0, 0.37);
+  box-shadow: 0.375rem 0.25rem 2.75rem 0.25rem rgba(0, 0, 0, 0.37);
+  -webkit-box-shadow: 0.375rem 0.25rem 2.75rem 0.25rem rgba(0, 0, 0, 0.37);
+  -moz-box-shadow: 0.375rem 0.25rem 2.75rem 0.25rem rgba(0, 0, 0, 0.37);
 }
 
 .advert {
   background-color: #fff;
-  padding: 20px;
+  padding: 1.25rem;
 
   color: hsl(218, 22%, 67%);
-  font-size: 14px;
+  font-size: 0.875rem;
 
 }
 
 .advert h1 {
   color: #2bb3b1;
-  font-size: 17px;
+  font-size: 1.0625rem;
   margin-top: 0;
 }
 
 .advert h2 {
   color: hsl(71, 73%, 54%);
-  font-size: 14px;
+  font-size: 0.875rem;
   font-weight: bold;
 }
 
 .advert p {
-  line-height: 20px;
+  line-height: 1.25rem;
 }
 
 .subscribe {
   background-color: #2bb3b1;
-  padding: 20px;
+  padding: 1.25rem;
   color: hsl(204, 43%, 93%);
 }
 
 .subscribe h2 {
-  font-size: 16px;
+  font-size: 1rem;
   font-weight: bold;
-  letter-spacing: 1.25px;
+  letter-spacing: 0.0781rem;
 }
 
 .price {
@@ -72,8 +72,8 @@ main {
 }
 
 .subscribe strong {
-  font-size: 30px;
-  margin-right: 15px;
+  font-size: 1.875rem;
+  margin-right: 0.9375rem;
 }
 
 .subscribe p {
@@ -82,17 +82,17 @@ main {
 
 .subscribe button {
   background-color: hsl(71, 73%, 54%);
-  width: 260px;
-  height: 50px;
+  width: 16.25rem;
+  height: 3.125rem;
   border: none;
-  border-radius: 10px;
+  border-radius: 0.625rem;
 
-  box-shadow: 2px 2px 10px 2px rgba(0, 0, 0, 0.27);
+  box-shadow: 0.125rem 0.125rem 0.625rem 0.125rem rgba(0, 0, 0, 0.27);
 
   color: hsl(204, 43%, 93%);
   font-weight: bold;
-  font-size: 14px;
-  letter-spacing: 1.5px;
+  font-size: 0.875rem;
+  letter-spacing: 0.0938rem;
   transition: transform 0.5s;
 }
 
@@ -108,29 +108,29 @@ main {
 
 .about {
   background-color: #4abebd;
-  padding: 20px;
+  padding: 1.25rem;
   color: hsl(204, 43%, 93%);
 }
 
 .about h2 {
-    font-size: 16px;
+    font-size: 1rem;
     font-weight: bold;
-    letter-spacing: 1.25px;
+    letter-spacing: 0.0781rem;
   }
 
 ul {
     list-style-type: none;
     padding: 0;
     font-weight: 200;
-    line-height: 20px;
-    font-size: 13px;
-    letter-spacing: 1.25px;
+    line-height: 1.25rem;
+    font-size: 0.8125rem;
+    letter-spacing: 0.0781rem;
 }
 
-@media screen and (min-width: 650px) {
+@media screen and (min-width: 40.625rem) {
     main {
-        width: 630px;
-        grid-template-columns: repeat(2, 315px);
+        width: 39.375rem;
+        grid-template-columns: repeat(2, 19.6875rem);
         grid-template-rows: repeat(2, auto);
     }
 
@@ -138,24 +138,24 @@ ul {
     .advert {
         grid-column: 1 / 3;
         grid-row: 1 / 2;
-        padding: 20px 40px;
+        padding: 1.25rem 2.5rem;
     }
 
     .subscribe {
         grid-column: 1 / 2;
         grid-row: 2 / 3;
-        padding: 20px 40px;
+        padding: 1.25rem 2.5rem;
     }
 
     .subscribe button {
-        width: 240px;
-        height: 45px;
+        width: 15rem;
+        height: 2.8125rem;
     }
 
     .about {
         grid-column: 2 / 3;
         grid-row: 2 / 3;
-        padding: 20px 40px;
+        padding: 1.25rem 2.5rem;
     }
 
     body {
