--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 .attribution {
-  font-size: 0.6875rem;
+  font-size: 11px;
   text-align: center;
 }
 .attribution a {
@@ -17,53 +17,53 @@ body {
 }
 
 main {
-  width: 19.4375rem;
-  border-radius: 0.625rem;
+  width: 311px;
+  border-radius: 10px;
   overflow: hidden;
   display: grid;
   grid-template-columns: repeat(1, 1fr);
   grid-template-rows: repeat(3, 1fr);
 
-  box-shadow: 0.375rem 0.25rem 2.75rem 0.25rem rgba(0, 0, 0, 0.37);
-  -webkit-box-shadow: 0.375rem 0.25rem 2.75rem 0.25rem rgba(0, 0, 0, 0.37);
-  -moz-box-shadow: 0.375rem 0.25rem 2.75rem 0.25rem rgba(0, 0, 0, 0.37);
+  box-shadow: 6px 4px 44px 4px rgba(0, 0, 0, 0.37);
+  -webkit-box-shadow: 6px 4px 44px 4px rgba(0, 0, 0, 0.37);
+  -moz-box-shadow: 6px 4px 44px 4px rgba(0, 0, 0, 0.37);
 }
 
 .advert {
   background-color: #fff;
-  padding: 1.25rem;
+  padding: 20px;
 
   color: hsl(218, 22%, 67%);
-  font-size: 0.875rem;
+  font-size: 14px;
 
 }
 
 .advert h1 {
   color: #2bb3b1;
-  font-size: 1.0625rem;
+  font-size: 17px;
   margin-top: 0;
 }
 
 .advert h2 {
   color: hsl(71, 73%, 54%);
-  font-size: 0.875rem;
+  font-size: 14px;
   font-weight: bold;
 }
 
 .advert p {
-  line-height: 1.25rem;
+  line-height: 20px;
 }
 
 .subscribe {
   background-color: #2bb3b1;
-  padding: 1.25rem;
+  padding: 20px;
   color: hsl(204, 43%, 93%);
 }
 
 .subscribe h2 {
-  font-size: 1rem;
+  font-size: 16px;
   font-weight: bold;
-  letter-spacing: 0.0781rem;
+  letter-spacing: 1.2496px;
 }
 
 .price {
@@ -72,8 +72,8 @@ main {
 }
 
 .subscribe strong {
-  font-size: 1.875rem;
-  margin-right: 0.9375rem;
+  font-size: 30px;
+  margin-right: 15px;
 }
 
 .subscribe p {
@@ -82,17 +82,17 @@ main {
 
 .subscribe button {
   background-color: hsl(71, 73%, 54%);
-  width: 16.25rem;
-  height: 3.125rem;
+  width: 260px;
+  height: 50px;
   border: none;
-  border-radius: 0.625rem;
+  border-radius: 10px;
 
-  box-shadow: 0.125rem 0.125rem 0.625rem 0.125rem rgba(0, 0, 0, 0.27);
+  box-shadow: 2px 2px 10px 2px rgba(0, 0, 0, 0.27);
 
   color: hsl(204, 43%, 93%);
   font-weight: bold;
-  font-size: 0.875rem;
-  letter-spacing: 0.0938rem;
+  font-size: 14px;
+  letter-spacing: 1.5008px;
   transition: transform 0.5s;
 }
 
@@ -108,29 +108,29 @@ main {
 
 .about {
   background-color: #4abebd;
-  padding: 1.25rem;
+  padding: 20px;
   color: hsl(204, 43%, 93%);
 }
 
 .about h2 {
-    font-size: 1rem;
+    font-size: 16px;
     font-weight: bold;
-    letter-spacing: 0.0781rem;
+    letter-spacing: 1.2496px;
   }
 
 ul {
     list-style-type: none;
     padding: 0;
     font-weight: 200;
-    line-height: 1.25rem;
-    font-size: 0.8125rem;
-    letter-spacing: 0.0781rem;
+    line-height: 20px;
+    font-size: 13px;
+    letter-spacing: 1.2496px;
 }
 
-@media screen and (min-width: 40.625rem) {
+@media screen and (min-width: 650px) {
     main {
-        width: 39.375rem;
-        grid-template-columns: repeat(2, 19.6875rem);
+        width: 630px;
+        grid-template-columns: repeat(2, 315px);
         grid-template-rows: repeat(2, auto);
     }
 
@@ -138,44 +138,49 @@ ul {
     .advert {
         grid-column: 1 / 3;
         grid-row: 1 / 2;
-        padding: 2.8125rem 2.5rem;
+        padding: 45px 40px 25px 40px;
     }
 
     .advert h1 {
-        font-size: 1.5625rem;
-        margin-bottom: 1.75rem;
+        font-size: 25px;
+        margin-bottom: 28px;
     }
 
     .advert h2 {
-        font-size: 1.125rem;
+        font-size: 18px;
     }
 
     .advert p {
-        line-height: 1.625rem;
-        letter-spacing: 0.0625rem;
+        line-height: 26px;
+        letter-spacing: 1px;
       }
 
     .subscribe {
         grid-column: 1 / 2;
         grid-row: 2 / 3;
-        padding: 2.8125rem 2.5rem 2.5rem 2.5rem;
-        font-size: 1rem;
+        padding: 45px 40px 40px 40px;
+        font-size: 16px;
     }
 
     .subscribe button {
-        width: 15rem;
-        height: 2.8125rem;
+        width: 240px;
+        height: 45px;
     }
 
     .subscribe h2 {
-        margin-bottom: 1.4375rem;
+        margin-bottom: 23px;
+        margin-top: 0px;
     }
 
     .about {
         grid-column: 2 / 3;
         grid-row: 2 / 3;
-        padding: 2.8125rem 2.5rem 2.5rem 2.5rem;
+        padding: 45px 40px 40px 40px;
 
+    }
+
+    .about h2 {
+        margin-top: 0px
     }
 
     body {
